# clawq

./: .dockerignore  .gitignore  CHANGELOG-0.4.0.md  CLAUDE.md  CONTEXT.md  DEFERRALS.md  Dockerfile  Dockerfile.test  Makefile  README.md  RELEASE.md  audit.md  clawq.opam  dune-project  dune-workspace  prompt-maintain.md
.backlog/: .context.yaml  index.yaml
.backlog/01-feature-roadmap-parity-expansi/: index.yaml
.backlog/02-nullclaw-parity-gap-closure/: index.yaml
.backlog/03-web-ui-streaming-chat-interfac/: index.yaml
.backlog/04-runtime-infrastructure-develop/: index.yaml
.backlog/05-formal-verification-expansion/: index.yaml
.backlog/06-formal-verification-gap-closur/: index.yaml
.backlog/07-persisted-inbound-queue-replay/: index.yaml
.backlog/08-error-correction-watcher/: index.yaml
.backlog/09-skill-md-refactor/: index.yaml
.backlog/10-skill-injection-overhaul/: index.yaml
.backlog/11-room-agent-mvp/: index.yaml
.backlog/12-room-agent-governance/: index.yaml
.backlog/13-ambient-and-scheduled-room-age/: index.yaml
.backlog/14-room-agent-access-and-scope-po/: index.yaml
.backlog/15-teams-first-room-agent-ux/: index.yaml
.backlog/16-github-app-and-room-code-workf/: index.yaml
.backlog/17-room-memory-and-admin-governan/: index.yaml
.backlog/fixes/: index.yaml
.codebase-memory/: artifact.json  graph.db.zst
.plan/: 2026-03-10-delegate-planning-phase2.md
.plan-research/: critical-fallibilism.md  prior-art-stuck-detection.md
.plans/: I019-error-correction-watcher.md  minimax-provider-impl.md
ci/: binary-size-thresholds.tsv
docs/: ACP_PROTOCOL_REFERENCE.md  AGENT_LOOP_RUNTIME_CROSSCHECK.md  ARCHITECTURE.md  B383-task-tree-output-verbosity-design.md  CHANNEL_AUTH_RUNTIME_MAP.md  CLAUDE.md  DEPENDENCY_AUDIT.md  DESIGN_SPEC.md  FLAMBDA_EXPERIMENT.md  FORMALIZATION_PLAN.md  FV_SPEC_IMPL_GAP_AUDIT_2026_03_08.md  MINIMIZATION_STRATS.md  NATIVE_SIZE_REPORT.md  PACKAGING_STRATEGY.md  PLAN_P2_01_PROVIDERS.md  PLAN_P2_02_CHANNELS_SIGNAL_MATRIX.md  PLAN_P2_04_CHANNELS_WHATSAPP_NOSTR.md  PLAN_P2_05_CHANNELS_REMAINING.md  PLAN_P2_06_OTP_PAIRING.md  PLAN_P2_07_MEMORY_EXPORT_IMPORT.md  PLAN_P2_08_SANDBOX_HARDENING.md  PLAN_P2_09_WASM_RUNTIME.md  PLAN_P2_10_CHAT_UI.md  PLAN_P2_11_TEST_COVERAGE.md  QUICKSTART.md  SESSION_ISOLATION_REVIEW_NOTES.md  SLASH_COMMAND_RENDERING_COMPATIBILITY.md  TOOLS.md  UPDATE_BINARY_MODE.md  _GEAR_EDITOR_PLAN.md  astro.config.mjs  cli-reference.md  connector-command-registration.md  connector-reference.md  credential-callsite-inventory.md  github-integration.md  github-p20-regression-verification.md  github-route-operator-contract.md  github-user-auth-operator-contract.md  github-vault-recovery.md  (+23 more)
npm-pkg/: README.md  package.json
old-docs/: ARCHITECTURE.md  HANDOFF_PLAN.md  OPTIMIZATION_MAINTENANCE.md  PLAN.md  PLAN_P2_03_CHANNELS_IRC_EMAIL.md  PLAN_P2_12_TUNNEL_ALTERNATIVES.md  QUICKSTART.md  github-webhook-setup.md
scripts/: bootstrap_coq.sh  build-install.sh  check_policy_doc_drift.py  clean_stale_dune_locks.sh  coq_verify.sh  embed_ui.sh  extract.sh  formal_verification_report.sh  gen_agent_builtins.sh  gen_chat_ui_assets.sh  generate_seal.py  report_binary_sizes.sh  report_dependency_weight.sh  report_native_symbols.sh  report_packaging_options.sh  run_flambda_experiment.sh  sync_version.sh  update_fv_data.sh
src/: ANTHROPIC_API_REQUIREMENTS.md  CLAUDE.md  GITHUB_API.md  RESPONSES_API_REQUIREMENTS.md  TEAMS_API.md  TELEGRAM_FORMATTING.md  ZAI_API_REQUIREMENTS.md  access_explanation.ml  access_snapshot.ml  acp_client.ml  acp_history.ml  acp_terminals.ml  acp_transport.ml  acp_types.ml  actor_snapshot.ml  actor_snapshot.mli  admin.ml  agent.ml  agent_0_compact.ml  agent_1_context.ml  agent_2_tools.ml  agent_compact_support.ml  agent_cost.ml  agent_debug.ml  agent_loop_conformance.ml  agent_memory_context.ml  agent_profile.ml  agent_prompt_loader.ml  agent_provider_ledger.ml  agent_room_budget.ml  agent_router.ml  agent_template.ml  agent_template_builtins.ml  agent_template_builtins_common.ml  agent_template_builtins_coordination.ml  agent_template_builtins_execution.ml  agent_template_builtins_maintenance.ml  agent_template_builtins_research.ml  agent_tools.ml  agent_turn_core.ml  (+677 more)
src/extracted/: clawq_core.ml  clawq_core.mli  dune
test/: CLAUDE.md  dune  test_access_explanation.ml  test_access_snapshot.ml  test_acp.ml  test_actor_snapshot.ml  test_admin.ml  test_agent_loop_conformance.ml  test_agent_router.ml  test_agent_scoped_memory.ml  test_agent_template.ml  test_ambient_inspection.ml  test_ambient_policy.ml  test_ask_user_question.ml  test_attachment_download.ml  test_audit.ml  test_b710.ml  test_background_task.ml  test_benchmark.ml  test_bg_shell.ml  test_browser.ml  test_builtin_credential_lease.ml  test_channel_formats.ml  test_chat_ui.ml  test_clawq_core.ml  test_cli_exit.ml  test_command_bridge.ml  test_commands.ml  test_compaction_flush.ml  test_completions.ml  test_config_loader.ml  test_config_search.ml  test_config_set.ml  test_config_show.ml  test_config_tree.ml  test_config_wizard.ml  test_connector_capabilities.ml  test_connector_history.ml  test_connector_tool_calls.ml  test_content_dsl.ml  (+329 more)
test/fixtures/github_events/: check_run_completed.json  check_suite_completed.json  installation_created.json  issue_assigned.json  issue_closed.json  issue_comment_created.json  issue_opened.json  issue_reopened.json  issue_transferred.json  missing_repository.json  pr_closed_unmerged.json  pr_converted_to_draft.json  pr_edited_title.json  pr_labeled.json  pr_merged.json  pr_opened.json  pr_opened_draft.json  pr_partial_fields.json  pr_ready_for_review.json  pr_reopened.json  pr_review_comment_created.json  pr_review_submitted.json  pr_synchronize.json  pr_unsupported_action.json  repo_name_owner_only.json  workflow_run_completed.json
ui/: index.html  package.json  tsconfig.json
workflows/: 2026-06-28-p14-m1-e2-t003-verification.md  2026-06-28-p14-t003-pi-resume-handoff.md  claude-tag-parity-p14-m1-e2-t003-loader-boundary-fix.workflow.json  claude-tag-parity-p14-m1-e2-t003.workflow.json
(+1881 files in other folders)
