opam-version: "2.0"
synopsis: "Coq port scaffold of nullclaw"
description: "Coq-first assistant runtime scaffold with extraction to OCaml."
maintainer: ["xertrov"]
authors: ["xertrov"]
license: "MIT"
homepage: "https://example.invalid/clawq"
bug-reports: "https://example.invalid/clawq/issues"
depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "3.21"}
  "coq" {>= "8.19"}
  "coq-stdlib"
  "cmdliner" {>= "2.1.0"}
  "yojson"
  "sqlite3"
  "lwt"
  "cohttp-lwt-unix"
  "conduit-lwt-unix"
  "tls-lwt"
  "logs"
  "fmt"
  "mirage-crypto"
  "mirage-crypto-rng"
  "kdf"
  "digestif"
  "base64"
  "httpun-ws-lwt-unix"
  "gluten-lwt-unix"
  "ca-certs"
  "alcotest" {with-test}
  # "wasm_of_ocaml-compiler" - optional: for WASM build target
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
