opam-version: "2.0"
synopsis: "Formally verified personal AI assistant runtime"
description: "Coq-first assistant runtime scaffold with extraction to OCaml."
maintainer: ["xertrov"]
authors: ["xertrov"]
license: "Unlicense"
homepage: "https://clawq.org"
bug-reports: "https://github.com/nicholasgasior/clawq/issues"
depends: [
  "ocaml" {>= "5.1.0"}
  "dune" {>= "3.21"}
  "coq" {>= "8.19" & < "9.0"}
  "coq-stdlib" {< "9.0"}
  "cmdliner" {>= "2.1.0"}
  "yojson"
  "sqlite3"
  "lwt"
  "cohttp-lwt-unix"
  "conduit-lwt-unix"
  "tls-lwt"
  "logs"
  "fmt"
  "mirage-crypto"
  "mirage-crypto-rng"
  "kdf"
  "digestif"
  "base64"
  "yaml"
  "httpun-ws-lwt-unix"
  "gluten-lwt-unix"
  "ca-certs"
  "alcotest" {with-test}
  # "wasm_of_ocaml-compiler" - optional: for WASM build target
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
