(rule
 (target build_info.ml)
 (deps (universe))
 (action
  (bash
   "hash=$(git rev-parse --short HEAD 2>/dev/null || echo unknown); bdate=$(date -u '+%Y-%m-%dT%H:%M:%SZ'); printf 'let version = \"0.1.1-dev\"\\nlet git_shorthash = \"%s\"\\nlet build_date = \"%s\"\\nlet version_string = \"0.1.1-dev (%s, %s)\"\\n' \"$hash\" \"$bdate\" \"$hash\" \"$bdate\" > %{target}")))

(library
 (name clawq_runtime_core)
 (modules
  build_info
  dot_dir
  lwt_util
  process_group
  phase2
  runtime_config
  config_loader
  http_client
  http_debug
  provider
  message_history
  agent_loop_conformance
  prompt_builder
  stream_visibility
  format_adapter
  status_phase
  connector_status
  reaction_tracker
  status_message
  connector_capabilities
  status_update
  content_dsl
  workspace_scaffold
  workspace_version
  string_util
  path_util
  agent_cost
  skill_dedup
  agent_tools
  agent
  session_core
  session_turn
  session_autonomous
  session
  stt
  tool
  tool_registry
  tools_builtin_util
  bg_shell
  tools_bg_shell
  tools_builtin_io
  tools_builtin_net
  tools_builtin
  task_tree_core
  memory
  rate_limiter
  scheduler
  runner_framework
  background_task
  worktree_merge
  plan_pipeline
  task_tree
  migrate
  audit
  skills
  skills_cmd_inject
  vector
  secret_store
  html_page
  openai_codex_oauth
  provider_quota
  resilience
  landlock
  rich_message
  channel
  channel_util
  group_chat_filter
  typing_indicator
  slash_commands_fmt
  slash_commands
  slash_commands_manifest
  totp
  cost_tracker
  model_discovery
  request_stats
  agent_router
  command_bridge_min
  sandbox
  pairing
  chat_ui_assets
  config_set
  config_show
  config_search
  config_wizard_model
  cli_exit
  config_wizard_update
  config_wizard_view
  config_wizard_tui
  tui_input
  setup_common
  restart_exec
  restart_notify
  daemon_status
  benchmark
  models_catalog
  model_preferences
  completions
  stuck_detector
  session_observer
  postmortem
  pmodel
  agent_prompt_loader
  summary_store
  summarizer
  tool_postprocess
  log_rotation
  table_format
  markdown_util
  error_watcher)
 (foreign_stubs
  (language c)
  (names landlock_stubs))
 (wrapped false)
 (libraries
  yojson
  sqlite3
  clawq_extracted
  lwt
  lwt.unix
  cohttp-lwt-unix
  conduit-lwt-unix
  logs
  logs.fmt
  fmt
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng.unix
  kdf.pbkdf
  digestif.c
  base64
  eqaf
  str))

(library
 (name clawq_runtime_integrations)
 (modules
  http_server
  telegram_api
  telegram
  telegram_format
  daemon_util
  daemon
  command_bridge_helpers
  command_bridge_session
  mcp_server
  service
  runtime_native
  runtime_docker
  tunnel_cloudflare
  tunnel_tailscale
  tunnel_ngrok
  tunnel_custom
  update_tool
  command_bridge
  slack
  discord
  ws_client
  discord_gateway
  slack_socket
  github_hooks
  github
  github_webhook
  github_api
  tunnel_manager
  mcp_client
  telemetry
  web_channel
  ui_server
  tts
  imessage
  lark
  dingtalk
  mattermost
  signal
  matrix
  irc
  email_channel
  whatsapp
  nostr
  line_channel
  onebot
  teams
  temp_downloads
  provider_anthropic
  provider_openai_codex
  provider_cohere
  provider_gemini
  provider_ollama
  provider_vertex
  provider_init
  config_validate
  setup_github
  setup_discord
  setup_slack
  setup_teams
  setup_telegram
  setup_tunnel
  setup_summarizer
  ec_process
  ec_diagnosis)
 (wrapped false)
 (libraries
  clawq_runtime_core
  yojson
  sqlite3
  clawq_extracted
  lwt
  lwt.unix
  cohttp-lwt-unix
  conduit-lwt-unix
  logs
  logs.fmt
  fmt
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng.unix
  kdf.pbkdf
  digestif.c
  base64
  eqaf
  str
  httpun-ws-lwt-unix
  httpun-ws
  gluten-lwt-unix
  ca-certs
  bigstringaf
  faraday))

(library
 (name clawq_wasm)
 (modules main_wasm)
 (wrapped false)
 (libraries))

(executable
 (name main_wasm_exe)
 (modules main_wasm_exe)
 (modes byte)
 (libraries clawq_wasm))

(executable
 (name main)
 (public_name clawq)
 (modules main)
 (libraries clawq_runtime_core clawq_runtime_integrations cmdliner))

(executable
 (name main_min)
 (public_name clawq-min)
 (enabled_if
  (= %{env:CLAWQ_BUILD_MINIMAL=false} true))
 (modules main_min)
 (libraries clawq_runtime_core cmdliner))
