(rule
 (target build_info.ml)
 (deps (universe) ../VERSION)
 (action
  (bash
   "ver=$(cat ../VERSION | tr -d '\\n'); hash=$(git rev-parse --short HEAD 2>/dev/null || echo unknown); bdate=$(date -u '+%Y-%m-%dT%H:%M:%SZ'); printf 'let version = \"%s\"\\nlet version_dev = \"%s-dev\"\\nlet git_shorthash = \"%s\"\\nlet build_date = \"%s\"\\nlet version_string = \"%s-dev (%s, %s)\"\\n' \"$ver\" \"$ver\" \"$hash\" \"$bdate\" \"$ver\" \"$hash\" \"$bdate\" > %{target}")))

(library
 (name clawq_runtime_core)
 (modules
  build_info
  dot_dir
  lwt_util
  process_group
  phase2
  runtime_config_types
  runtime_config_models
  runtime_config_defaults
  egress_evaluator
  policy_http_client
  runtime_config_json_sections
  runtime_config_json
  runtime_config
  profile_policy
  room_policy
  invocation_restrict
  config_loader_support
  config_loader_agent_defaults
  config_loader_channels
  config_loader_basic_sections
  config_loader_providers
  config_loader_access
  config_loader_room_profiles
  config_loader
  http_client
  http_debug
  model_utils
  provider_types
  provider_streaming
  provider_routing
  provider
  message_history
  agent_loop_conformance
  prompt_builder
  stream_visibility
  format_adapter
  status_phase
  connector_status
  reaction_tracker
  status_message
  connector_capabilities
  ambient_policy
  status_update
  content_dsl
  workspace_scaffold
  workspace_version
  string_util
  sql_util
  time_util
  path_util
  skill_dedup
  skill_invocation_guard
  session_debug
  agent_debug
  agent_compact_support
  agent_0_compact
  agent_1_context
  agent_memory_context
  agent_2_tools
  agent_profile
  agent_provider_ledger
  agent_room_budget
  agent_turn_setup
  agent_turn_core
  agent
  session_types
  session_queue
  session_activity
  session_context
  session_persistence
  session_core
  session_heartbeat
  session_room_profile
  session_management
  session_postmortem
  session_agents
  session_postmortem_launcher
  session_turn
  session_autonomous
  session
  stt
  tool
  tool_param
  tool_registry
  tools_builtin_proc
  tools_builtin_session
  tools_builtin_util
  bg_shell
  tools_bg_shell
  tools_builtin_fs
  tools_builtin_memory
  tools_builtin_room_memory
  tools_builtin_help
  tools_builtin_io
  tools_builtin_zai
  tools_builtin_git
  tools_builtin_net
  tools_builtin_browser
  tools_builtin_messaging
  tools_builtin_ask
  tools_builtin
  task_tree_types
  task_tree_db
  task_tree_render
  task_tree_ops
  task_tree_core
  task_tree_templates
  task_tree_agents
  memory_0_schema
  memory_0_queue
  memory_0_postmortem
  memory_types
  memory_scoped
  memory_core
  memory_session
  memory_search
  room_profile_reconcile
  room_stale_query
  room_watcher_decision
  delivery_types
  teams_delivery_lifecycle
  room_ambient_delivery
  ambient_inspection
  room_progress
  memory
  rate_limiter
  scheduler_schedule
  scheduler_output_guard
  scheduler_routine_target
  scheduler
  runner_framework
  background_task_0_format
  session_host
  session_host_direct
  session_host_herdr
  session_host_tmux
  session_host_registry
  background_task_local
  background_task_db
  background_task_log
  background_task_control
  background_task_context
  background_task_spawn
  background_task_room
  background_task_workflow
  background_task
  background_task_transcript
  background_task_transcript_tool
  background_task_tools
  subagent_tool
  worktree_merge
  plan_pipeline
  task_tree
  migrate
  audit
  egress_audit
  tool_authz
  access_snapshot
  access_explanation
  tool_catalog
  tool_discovery
  tool_discovery_adapters
  mcp_catalog
  mcp_room_scope
  mcp_registry_publish
  setup_plan
  setup_plan_apply
  setup_plan_consent
  setup_plan_bundle
  principal_identity
  principal_identity_store
  principal_bootstrap
  principal_resolve
  principal_link_protocol
  principal_link_exec
  github_app_setup_tx
  github_app_setup_callback
  github_app_setup_resume
  github_app_installation_scope
  github_event_envelope
  github_route_filter
  github_filter_enrichment
  github_route_filter_eval
  github_route_filter_preview
  github_route_store
  github_route_match
  github_route_match_advanced
  github_route_match_bench
  github_route_transfer
  github_route_migrate
  github_route_admin
  github_route_apply
  github_route_ops
  github_room_event_journal
  github_item_projection
  github_comment_mode
  github_event_history_index
  github_delivery_intent
  github_delivery_outbox
  github_delivery_reconcile
  github_delivery_ops
  github_route_diagnostics
  github_route_upgrade_validate
  github_teams_card_render
  github_plain_delivery_render
  github_item_context_resolve
  github_collab_grounding
  github_collab_actions
  github_pr_review_actions
  github_code_change_action
  github_room_background_work
  github_merge_action
  github_issue_actions
  github_workflow_dispatch
  github_action_workflow
  github_action_reconcile
  github_room_tools
  github_auth_selection
  github_attribution_policy
  github_user_auth_readiness
  github_user_auth_tx
  github_user_auth_delivery
  github_user_token_store
  github_user_token_master_key
  github_user_token_vault
  github_user_token_rewrap
  credential_lease
  skills
  skills_cmd_inject
  builtin_skills
  vector
  secret_store
  html_page
  openai_codex_oauth
  provider_quota_state
  provider_quota
  resilience
  landlock
  rich_message
  question_presenter
  channel
  channel_util
  connector_history
  group_chat_filter
  typing_indicator
  slash_commands_bl_fmt
  slash_commands_fmt
  slash_commands_fmt_extra
  slash_commands_stats_fmt
  slash_commands
  slash_commands_model
  slash_commands_bash
  slash_commands_repo
  repo_manager
  slash_commands_manifest
  totp
  xiaomi
  cost_tracker
  model_discovery
  request_stats
  slash_commands_context
  slash_commands_sessions
  agent_router
  agent_template
  agent_template_builtins_common
  agent_template_builtins_coordination
  agent_template_builtins_research
  agent_template_builtins_execution
  agent_template_builtins_maintenance
  agent_template_builtins
  command_bridge_min
  command_bridge_shared
  cdp_client
  browser_agent
  sandbox
  runner_isolation
  pairing
  chat_ui_assets
  config_set
  config_show
  config_tree
  config_search
  config_wizard_model
  cli_exit
  config_wizard_update
  config_wizard_view
  config_wizard_tui
  tui_input
  setup_common
  setup_tui
  restart_exec
  restart_notify
  room_session
  room_origin
  room_workspace
  room_activity_ledger
  room_github_backlinks
  github_pr_subscriptions
  github_pr_policy
  github_review_run
  github_work_item
  repo_execution_policy
  work_item_lease
  workflow_run_trigger
  room_progress_checklist
  teams_progress_card
  slack_progress_checklist
  url_sanitize
  room_budget
  room_request_classifier
  room_session_record
  daemon_status
  benchmark
  debate
  model_cache_policy
  models_catalog
  model_preferences
  model_validation
  completions
  stuck_detector
  session_observer
  postmortem
  postmortem_followup
  pmodel
  agent_prompt_loader
  summary_store
  summarizer
  tool_postprocess
  log_rotation
  table_format
  markdown_util
  error_watcher
  acp_types
  acp_transport
  acp_terminals
  acp_history
  acp_client
  admin
  pair_coding_types
  pair_coding_state
  pair_coding_tools
  pair_coding_prompts
  pair_coding_session
  pair_coding_report
  webhook_handler
  rig
  rig_builtins
  held_items
  structured_pipeline_types
  structured_pipeline_schema
  structured_pipeline_builtins
  structured_pipeline
  structured_pipeline_run)
 (foreign_stubs
  (language c)
  (names landlock_stubs))
 (wrapped false)
 (libraries
  yojson
  sqlite3
  clawq_extracted
  lwt
  lwt.unix
  cohttp-lwt-unix
  conduit-lwt-unix
  logs
  logs.fmt
  fmt
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng.unix
  kdf.pbkdf
  digestif.c
  base64
  eqaf
  str
  yaml))

(library
 (name clawq_runtime_integrations)
 (modules
  http_server_0_util
  http_server_webhooks
  http_server_workers
  worker_client
  worker_readiness
  http_server_models
  http_server_chat
  http_server
  telegram_api_state
  telegram_api
  telegram_attachments
  telegram_rich_notifier
  telegram
  telegram_poll
  telegram_format
  connector_room_progress
  daemon_task_tree_helpers
  daemon_util_localturn
  daemon_inbound_replay
  daemon_resume
  daemon_util
  daemon_config_reload
  daemon_config_watch
  daemon_channels
  daemon_logging
  daemon_questions
  daemon_startup
  daemon_heartbeat
  daemon_background_loops
  daemon_runtime_loops
  github_app_setup_runtime
  ambient_daemon
  daemon
  command_bridge_models
  command_bridge_gateway
  command_bridge_usage
  command_bridge_session_fmt
  command_bridge_helpers
  github_route_cli
  command_bridge_cron
  github_pr_subscriptions_cli
  command_bridge_bgargs
  command_bridge_plan
  command_bridge_auth
  command_bridge_pipeline
  command_bridge_session
  command_bridge_debug
  command_bridge_room_common
  command_bridge_room_ledger
  command_bridge_room_memory
  command_bridge_room_routine
  command_bridge_agents
  command_bridge_rooms
  command_bridge_agent_cmds
  room_session_cli
  room_deliveries_cli
  room_audit_export
  command_bridge_bgcmd
  command_bridge_tunnel
  mcp_server
  mcp_transport
  service
  runtime_native
  runtime_docker
  tunnel_cloudflare
  tunnel_intf
  tunnel_tailscale
  tunnel_ngrok
  tunnel_custom
  update_pkg_manager
  update_tool
  command_bridge
  connector_dispatch
  slack_api
  slack
  discord_api
  discord
  discord_principal_ingress
  ws_client
  discord_gateway
  slack_socket
  slack_principal_ingress
  github_hooks
  github
  github_webhook
  github_app_webhook_ingress
  github_pr_dispatch
  github_api
  github_app_token
  tunnel_manager
  mcp_client
  telemetry
  web_channel
  ui_server
  tts
  imessage
  lark
  dingtalk
  mattermost
  signal
  matrix
  irc
  email_channel
  whatsapp
  nostr
  line_channel
  onebot
  teams_auth
  teams_principal_ingress
  telegram_principal_ingress
  teams_file_consent
  teams_activity_parser
  teams_file_upload
  teams_adaptive_card
  teams_api
  teams_attachments
  teams_command_cards
  teams_command_text
  teams_debug_dump
  teams_rich_notifier
  teams_webhook
  teams
  teams_context_capture
  teams_what_can_do
  attachment_download
  voice_transcription
  temp_downloads
  runner_relay
  mcp_server_http
  provider_anthropic
  provider_openai_codex
  provider_cohere
  provider_gemini
  provider_ollama
  provider_vertex
  provider_minimax
  provider_init
  config_validate
  setup_github
  github_wizard_checks
  setup_discord
  setup_slack
  setup_teams
  setup_telegram
  setup_tunnel
  setup_summarizer
  setup_provider
  setup_web_search
  setup_voice
  setup_cron
  setup_agents
  setup_main
  setup_imessage
  setup_security
  setup_gateway
  setup_totp
  setup_line
  setup_whatsapp
  setup_mattermost
  setup_dingtalk
  setup_signal_channel
  setup_matrix
  setup_irc
  setup_email
  setup_nostr
  setup_lark
  setup_onebot
  setup_notify
  setup_error_watcher
  setup_observer
  setup_zai_mcp
  setup_memory
  setup_room_wizard_types
  setup_room_wizard_connectors
  setup_room_wizard_plan
  setup_room_wizard_rerun
  setup_room_wizard
  setup_room_wizard_validate
  room_agent_setup_plan
  room_agent_setup_apply
  room_readiness_report
  setup_connector_history
  setup_prompt
  setup_resilience
  setup_heartbeat
  ec_process
  ec_diagnosis
  command_bridge_pair)
 (wrapped false)
 (libraries
  clawq_runtime_core
  yojson
  sqlite3
  clawq_extracted
  lwt
  lwt.unix
  cohttp-lwt-unix
  conduit-lwt-unix
  logs
  logs.fmt
  fmt
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng.unix
  mirage-crypto-pk
  mirage-crypto-ec
  x509
  kdf.pbkdf
  digestif.c
  base64
  eqaf
  str
  httpun-ws-lwt-unix
  httpun-ws
  gluten-lwt-unix
  ca-certs
  bigstringaf
  faraday))

(library
 (name clawq_wasm)
 (modules main_wasm)
 (wrapped false)
 (libraries))

(executable
 (name main_wasm_exe)
 (modules main_wasm_exe)
 (modes byte)
 (libraries clawq_wasm))

(executable
 (name main)
 (public_name clawq)
 (modules
  main_cmd_common
  main_audit_cmds
  main_background_cmds
  main_models_cmds
  main_plan_cmds
  main_session_cmds
  main)
 (libraries clawq_runtime_core clawq_runtime_integrations cmdliner))

(executable
 (name main_min)
 (public_name clawq-min)
 (enabled_if
  (= %{env:CLAWQ_BUILD_MINIMAL=false} true))
 (modules main_min)
 (libraries clawq_runtime_core cmdliner))
