(test
 (name test_main)
 (deps ../src/main.exe)
 (modules
  test_main
  test_plan_pipeline
  test_agent_loop_conformance
  test_agent_router
  test_audit
  test_background_task
  test_benchmark
  test_channel_formats
  test_chat_ui
  test_clawq_core
  test_cli_exit
  test_command_bridge
  test_commands
  test_compaction_flush
  test_config_loader
  test_config_set
  test_config_show
  test_config_search
  test_config_wizard
  test_connector_tool_calls
  test_contracts
  test_cost_tracker
  test_daemon
  test_dingtalk
  test_discord
  test_discord_gateway
  test_email
  test_format_adapter
  test_github
  test_helpers
  test_history_search
  test_http_server
  test_imessage
  test_irc
  test_landlock
  test_lark
  test_line
  test_matrix
  test_mattermost
  test_mcp
  test_memory
  test_memory_retention
  test_memory_search
  test_migrate
  test_model_preferences
  test_models_catalog
  test_nostr
  test_onebot
  test_openai_codex_oauth
  test_pairing
  test_perf
  test_phase3
  test_prompt_builder
  test_provider
  test_provider_anthropic
  test_provider_openai_codex
  test_provider_quota
  test_rate_limiter
  test_reaction_tracker
  test_resilience
  test_restart
  test_sandbox
  test_scheduler
  test_secret_store
  test_service
  test_session
  test_session_persistence
  test_signal
  test_skills
  test_slack
  test_slack_socket
  test_slash_commands
  test_status_message
  test_stream_visibility
  test_streaming
  test_task_tree
  test_telegram_dedupe
  test_telegram_format
  test_telegram_reactions
  test_telegram_status
  test_telegram_typing
  test_tools
  test_tools_security
  test_totp
  test_tunnel_manager
  test_tunnels
  test_ui_server
  test_update_tool
  test_vector
  test_wasm
  test_whatsapp
  test_keepalive
  test_completions
  test_session_model_override
  test_setup_github
  test_setup_discord
  test_setup_slack
  test_setup_teams
  test_setup_telegram
  test_setup_tunnel
  test_setup_summarizer
  test_summarizer
  test_log_rotation)
 (libraries
  clawq_extracted
  clawq_runtime_core
  clawq_runtime_integrations
  clawq_wasm
  alcotest
  sqlite3
  yojson
  str
  unix
  cohttp
  lwt
  lwt.unix))
