(test
 (name test_main)
 (deps ../src/main.exe)
 (modules
  test_main
  test_ambient_policy
  test_plan_pipeline
  test_agent_loop_conformance
  test_agent_router
  test_agent_scoped_memory
  test_room_memory_tools
  test_agent_template
  test_audit
  test_b710
  test_background_task
  test_subagent_context
  test_bg_shell
  test_benchmark
  test_channel_formats
  test_chat_ui
  test_clawq_core
  test_cli_exit
  test_command_bridge
  test_commands
  test_compaction_flush
  test_config_loader
  test_credential_handles
  test_credential_lease
  test_builtin_credential_lease
  test_config_set
  test_config_show
  test_config_tree
  test_config_search
  test_config_wizard
  test_connector_tool_calls
  test_contracts
  test_cost_tracker
  test_daemon
  test_debate
  test_dingtalk
  test_dot_dir
  test_discord
  test_discord_gateway
  test_egress_rules
  test_email
  test_format_adapter
  test_github
  test_github_app_config
  test_github_app_token
  test_github_app_config
  test_group_chat_filter
  test_helpers
  test_history_search
  test_http_server
  test_imessage
  test_irc
  test_landlock
  test_lark
  test_line
  test_matrix
  test_mattermost
  test_mcp
  test_memory
  test_memory_archive
  test_room_profile_reconcile
  test_room_budget
  test_room_request_classifier
  test_room_session_record
  test_memory_retention
  test_memory_search
  test_migrate
  test_model_preferences
  test_models_catalog
  test_model_discovery
  test_nostr
  test_onebot
  test_openai_codex_oauth
  test_pairing
  test_perf
  test_phase3
  test_postmortem
  test_prompt_builder
  test_provider
  test_profile_policy
  test_provider_anthropic
  test_provider_minimax
  test_provider_openai_codex
  test_provider_quota
  test_rate_limiter
  test_reaction_tracker
  test_request_stats
  test_resilience
  test_restart
  test_room_session
  test_room_origin
  test_room_workspace
  test_room_activity_ledger
  test_room_progress_checklist
  test_slack_progress_checklist
  test_teams_progress_card
  test_room_stale_query
  test_room_watcher_decision
  test_room_ambient_delivery
  test_ambient_inspection
  test_room_progress
  test_sandbox
  test_scheduler
  test_secret_store
  test_scope_resolver
  test_access_snapshot
  test_access_explanation
  test_service
  test_session
  test_session_observer
  test_session_persistence
  test_signal
  test_http_client
  test_http_debug
  test_skills
  test_skills_cmd_inject
  test_slack
  test_slack_socket
  test_slash_commands
  test_status_message
  test_stream_visibility
  test_streaming
  test_task_tree
  test_telegram_dedupe
  test_telegram_format
  test_telegram_reactions
  test_telegram_status
  test_telegram_typing
  test_typing_indicator
  test_tools
  test_tools_security
  test_totp
  test_tunnel_manager
  test_tunnels
  test_ui_server
  test_update_tool
  test_update_pkg_manager
  test_vector
  test_wasm
  test_whatsapp
  test_keepalive
  test_completions
  test_session_model_override
  test_model_validation
  test_native_subagents_e2e
  test_setup_github
  test_setup_discord
  test_setup_slack
  test_setup_teams
  test_teams
  test_setup_telegram
  test_setup_tunnel
  test_setup_summarizer
  test_setup_tui
  test_setup_provider
  test_setup_web_search
  test_setup_voice
  test_setup_cron
  test_summarizer
  test_setup_imessage
  test_setup_security
  test_setup_gateway
  test_setup_totp
  test_setup_line
  test_setup_whatsapp
  test_setup_mattermost
  test_setup_dingtalk
  test_setup_signal_channel
  test_setup_matrix
  test_setup_irc
  test_setup_email
  test_setup_nostr
  test_setup_lark
  test_setup_onebot
  test_setup_notify
  test_setup_error_watcher
  test_setup_observer
  test_setup_zai_mcp
  test_setup_memory
  test_setup_prompt
  test_setup_resilience
  test_setup_heartbeat
  test_ask_user_question
  test_question_presenter
  test_log_rotation
  test_worktree_merge
  test_table_format
  test_markdown_util
  test_error_watcher
  test_connector_capabilities
  test_connector_history
  test_status_update
  test_content_dsl
  test_workspace_version
  test_acp
  test_admin
  test_attachment_download
  test_voice_transcription
  test_pair_coding
  test_webhook_handler
  test_browser
  test_rig
  test_held_items
  test_repo_manager
  test_runner_integration
  test_runner_relay
  test_structured_pipeline
  test_xiaomi
  test_provider_xiaomi)
 (libraries
  clawq_extracted
  clawq_runtime_core
  clawq_runtime_integrations
  clawq_wasm
  alcotest
  sqlite3
  yojson
  str
  unix
  cohttp
  lwt
  lwt.unix))
